--- a/src/components/MainBody/NoteHead/NoteHead.css
+++ b/src/components/MainBody/NoteHead/NoteHead.css
@@ -3,4 +3,64 @@
 	width: 100%;
 	height: 100%;
 	background-color:var(--bla1);
+	overflow: hidden;
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.NoteHead:after {
+	content:'';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-color: #000;
+	opacity: 0.7;
+}
+
+.NoteHead .NoteHead__Info {
+	position: relative;
+	width: auto;
+	height: auto;
+	left: 2em;
+	top:1em;
+	z-index: 9999;
+}
+
+.NoteHead .NoteHead__Info h2 {
+	font-family: 'Baloo', cursive;
+	font-size: 3.5em;
+	line-height: 0em;
+	color: var(--w);
+	margin-bottom: 0.6em;
+}
+
+.NoteHead .NoteHead__Info p {
+	font-family: 'Montserrat', sans-serif;
+	line-height: 0.3em;
+	font-size: 0.8em;
+	color: var(--or);
+}
+
+.NoteHead .NoteHead__Info p span {
+	color: var(--w2)
+}
+
+.NoteHead__Info--BgimgBtn {
+	position: absolute;
+	display: block;
+	box-sizing: border-box;
+	width: 1em;
+	height: 1em;
+	background-color: transparent;
+	background-image: url('http://localhost:3000/assets/changeBg.svg');
+	background-size:80%;
+	background-position: center;
+	background-repeat: no-repeat;
+	cursor: pointer;
+	top:-3.8em;
+	right:3em;
+	border:0.1em solid var(--w);
 }
