Set TextBody + Date to contentEditable

--- a/src/components/MainBody/NoteBody/NoteBody.css
+++ b/src/components/MainBody/NoteBody/NoteBody.css
@@ -17,6 +17,9 @@
 	line-height: 2em;
 	outline: none;
 	overflow-y: scroll;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 0.9em;
+	color: var(--w);
 }
 
 .NoteBody__Text::-webkit-scrollbar {
