--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -57,6 +57,19 @@
 	background-color: var(--blu);
 }
 
+.button-save:before {
+	content:'';
+	position: absolute;
+	left:100%;
+	top:50%;
+	transform:translateY(-50%);
+	z-index: 99999;
+	width:0.3em;
+	height:1em;
+	opacity: 0;
+	background-color: #3FC577;
+}
+
 .disable {
 	opacity: 0.3 !important;
 	pointer-events: none;
