Making new entries is now working

--- a/src/containers/List/List.css
+++ b/src/containers/List/List.css
@@ -35,3 +35,12 @@
 .Start--Buton:focus {
 	background-color:var(--bla3);
 }
+
+.List__Entries {
+	width: auto;
+	display: grid;
+	grid-template-rows: repeat(4, 1fr);
+	grid-template-columns: 2fr;
+	grid-row-gap: 2em;
+	padding-left: 2em;
+}
