--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,9 @@ body {
   --or2 : #FFB627;
   --w : #f9f9f9;
   --w2 : #B2B2B2;
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
 
 code {
