--- a/src/containers/List/List.css
+++ b/src/containers/List/List.css
@@ -38,9 +38,20 @@
 
 .List__Entries {
 	width: auto;
+	height: 20em;
 	display: grid;
 	grid-template-rows: repeat(4, 1fr);
-	grid-template-columns: 2fr;
-	grid-row-gap: 2em;
+	grid-auto-columns: repeat(2, 1fr);
+	grid-row-gap: 1.5em;
 	padding-left: 2em;
 }
+.List__Entries a {
+	width: 30em;
+	text-decoration: none;
+	height: 10em;
+}
+/*.List__Entries a:nth-child(5) {
+	background-color: blue;
+	grid-column: 2;
+	grid-row: 1;
+}*/
