Display entries in columns

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
   --bla1 : #222220;
   --bla2 : #353531;
   --bla3 : #2C2C2A;
+  --bla4 : #464643;
   --rd : #ec4e20;
   --blu : #00A6ED;
   --or : #ff9505;
