--- a/src/containers/List/List.css
+++ b/src/containers/List/List.css
@@ -5,7 +5,7 @@
 	background-color:var(--bla3);
 	background-image: url('https://firebasestorage.googleapis.com/v0/b/notnik-app.appspot.com/o/assets%2Fchristmas-dark.png?alt=media&token=366d39a3-46c2-4c9a-bed9-a141cc3a0cd8');
 	background-repeat: repeat;
-	background-size: 15em; /* reindeers 15em = tic-tac-toe 20em*/
+	background-size: 15em;
 	background-position: auto;
 	box-sizing: border-box;
 }
@@ -37,21 +37,36 @@
 }
 
 .List__Entries {
-	width: auto;
-	height: 20em;
+	margin-left: 2em;
+	margin-right: 2em;
+	width: calc(100vw - 10em);
+	padding: 2em 0;
+	height: auto;
 	display: grid;
 	grid-template-rows: repeat(4, 1fr);
-	grid-auto-columns: repeat(2, 1fr);
 	grid-row-gap: 1.5em;
+	grid-column-gap: 1.5em;
+	grid-auto-flow: column;
 	padding-left: 2em;
+	overflow-x: scroll;
 }
 .List__Entries a {
 	width: 30em;
 	text-decoration: none;
 	height: 10em;
 }
-/*.List__Entries a:nth-child(5) {
-	background-color: blue;
-	grid-column: 2;
-	grid-row: 1;
-}*/
+
+.List__Entries::-webkit-scrollbar {
+	height: 0.7em;
+	width: 0.7em;
+}
+
+.List__Entries::-webkit-scrollbar-track {
+	background:var(--bla1);
+}
+.List__Entries::-webkit-scrollbar-thumb {
+	background:var(--bla4);
+}
+.List__Entries::-webkit-scrollbar-thumb:hover {
+	background:var(--bla3);
+}
