Prevent infinite note creation wit loading screen

--- a/src/components/Entry/Entry.css
+++ b/src/components/Entry/Entry.css
@@ -84,7 +84,7 @@
 	outline: none;
 }
 
-.Entry__Info h4 {
+.Entry__Text {
 	font-family: 'Montserrat', sans-serif;
 	line-height: 1em;
 	font-size: 0.7em;
