--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -7,6 +7,7 @@
 	grid-template-columns:1fr;
 	grid-template-rows:1fr repeat(3, 3em) 1fr;
 	grid-row-gap: 2em;
+	z-index: 99999;
 }
 .Menu .button {
 	position: relative;
@@ -80,6 +81,27 @@
 	box-shadow: 0 0 80px 40px var(--blu);
 	animation: confirm 1.5s ease-in-out infinite;
 	animation-fill-mode: forwards;
+}
+
+.waitForNewEntry {
+	position: fixed;
+	background-color: var(--bla1);
+	width: 100vw;
+	height: 100vh;
+	opacity: 0.7;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	z-index: 999;
+}
+
+.waitForNewEntry h2 {
+	font-family: 'Baloo', cursive;
+	font-size: 1.2em;
+	line-height: 0em;
+	outline: none;
+	color:var(--w);
 }
 
 @keyframes confirm {
