--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -59,7 +59,8 @@
 
 .disable {
 	opacity: 0.3 !important;
-	pointer-events: none;
+	pointer-events: none !important;
+	cursor: none !important;
 }
 
 .confirm {
@@ -87,7 +88,7 @@
 	background-color: var(--bla1);
 	width: 100vw;
 	height: 100vh;
-	opacity: 0.7;
+	opacity: 0.8;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -97,10 +98,11 @@
 
 .waitForNewEntry h2 {
 	font-family: 'Baloo', cursive;
-	font-size: 1.2em;
+	font-size: 1.3em;
 	line-height: 0em;
 	outline: none;
 	color:var(--w);
+	z-index: 9999;
 }
 
 @keyframes confirm {
