--- a/src/containers/List/List.css
+++ b/src/containers/List/List.css
@@ -100,3 +100,8 @@
 .Login h2:hover {
 	text-shadow: 0 0 20px var(--w);
 }
+
+.disableStart {
+	opacity: 0 !important;
+	pointer-events: none !important;
+}
