--- a/src/containers/Auth/Auth.css
+++ b/src/containers/Auth/Auth.css
@@ -1,8 +1,8 @@
 .Auth {
 	position: absolute;
-	width: 100%;
-	height: 100%;
 	z-index: 999;
+	top:50%;
+	transform:translateY(-50%);
 	display:flex;
 	align-items: center;
 	justify-content: center;
