--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 ::selection {
-  background-color:#000;
+  background-color:#ff9505;
   color:#f9f9f9;
 }
 
@@ -41,4 +41,44 @@ code {
 .fade-enter.fade-enter-active {
   opacity: 1;
   transition: opacity 250ms ease-in;
+}
+
+#load-screen {
+  opacity: 1;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: var(--bla1);
+  z-index: 999999;
+  transition: height 1s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+#load-screen h2 {
+  font-family: 'Baloo', cursive;
+  font-size: 4em;
+  color:var(--w);
+}
+
+#load-screen .load-animation {
+   width: 3em;
+   height: 3em;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-image: url('http://localhost:3000/assets/loader.svg');
+}
+
+#shape-overlay {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background-color: var(--rd);
+  z-index:999998;
+  transition: height 1s;
+  transition-delay: 0.1s;
 }
