--- a/src/components/Splash/Splash.css
+++ b/src/components/Splash/Splash.css
@@ -5,10 +5,10 @@
 	display: grid;
 	grid-template-columns: 27em 1fr;
 	grid-template-rows: 1fr;
-	background-image: url('https://firebasestorage.googleapis.com/v0/b/notnik-app.appspot.com/o/assets%2Fchristmas-dark.png?alt=media&token=366d39a3-46c2-4c9a-bed9-a141cc3a0cd8');
-	background-repeat: repeat;
-	background-size: 15em;
-	background-position: auto;
+	background-image: url('http://localhost:3000/assets/bg/Notnik-Bg2.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
 }
 
 .Splash__Left {
@@ -69,16 +69,6 @@
 	outline: none;
 	text-align: justify;
 	z-index:999;
-}
-
-.Splash__Left .Splash__Left__Text p:before {
-	position: absolute;
-	content: '';
-	width: 100%;
-	height: 100%;
-	background-color: var(--bla1);
-	opacity: 0.5;
-	z-index: -1;
 }
 
 .Splash__Right {
