--- a/src/components/Entry/Entry.css
+++ b/src/components/Entry/Entry.css
@@ -13,7 +13,7 @@
 	cursor: pointer;
 }
 
-.Entry *:hover, .Entry *:visited, .Entry *:link, .Entry *:active, {
+.Entry *:hover, .Entry *:visited, .Entry *:link, .Entry *:active {
 	text-decoration: none;
 }
 
@@ -101,7 +101,7 @@
 	width:0.9em;
 	height:0.9em;
 	opacity: 0.1;
-	background-image: url('http://localhost:3000/assets/delete.svg');
+	background-image: url('https://firebasestorage.googleapis.com/v0/b/notnik-app.appspot.com/o/assets%2Fdelete.svg?alt=media&token=b721d142-09d2-4c40-bbf9-8ae3e8ebb32c');
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
