Prepare files for deployment

--- a/src/index.css
+++ b/src/index.css
@@ -61,5 +61,5 @@ code {
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
-   background-image: url('http://localhost:3000/assets/loader.svg');
+   background-image: url('https://firebasestorage.googleapis.com/v0/b/notnik-app.appspot.com/o/assets%2Floader.svg?alt=media&token=a6f92cda-7f6f-4f6b-9f60-c319e2af8553');
 }
