--- a/src/components/MainBody/NoteHead/NoteHead.css
+++ b/src/components/MainBody/NoteHead/NoteHead.css
@@ -76,7 +76,7 @@
 	width: 1em;
 	height: 1em;
 	background-color: transparent;
-	background-image: url('http://localhost:3000/assets/changeBg.svg');
+	background-image: url('https://firebasestorage.googleapis.com/v0/b/notnik-app.appspot.com/o/assets%2FchangeBg.svg?alt=media&token=20aed7cb-4f12-47ea-8f1c-d5870b31a0e5');
 	background-size:80%;
 	background-position: center;
 	background-repeat: no-repeat;
