--- a/src/components/Main/Splash/Splash.css
+++ b/src/components/Main/Splash/Splash.css
@@ -1,93 +1,141 @@
 .Splash {
-	width: 100%;
-	height: 100%;
-	background: var(--bla3);
-	display: grid;
-	grid-template-columns: 27em 1fr;
-	grid-template-rows: 1fr;
-	background-image: url('https://firebasestorage.googleapis.com/v0/b/notnik-app.appspot.com/o/assets%2FNotnik-bg-splash.jpg?alt=media&token=6b6e10ac-5fec-4e5d-950f-b05b30f30be9');
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-	/* animation: zoom 30s ease-in-out infinite; */
+  width:100%;
+  position: relative;
+  background: var(--bla3);
+  display: grid;
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/notnik-app.appspot.com/o/assets%2FNotnik-bg-splash.jpg?alt=media&token=6b6e10ac-5fec-4e5d-950f-b05b30f30be9");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 @keyframes zoom {
-	0% {
-		background-size: 300%;
-	}
-	50% {
-		background-size: 350%;
-	}
-	100% {
-		background-size: 300%;
-	}
+  0% {
+    background-size: 300%;
+  }
+  50% {
+    background-size: 350%;
+  }
+  100% {
+    background-size: 300%;
+  }
 }
 
 .Splash__Left {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .Splash__Left .Splash__Left__Text {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	padding: 3em;
-	border:1px solid var(--or);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border: 1px solid var(--or);
 }
 
 .Splash__Left .Splash__Left__Text h2 {
-	font-family: 'Baloo', cursive;
-	font-size: 4.5em;
-	line-height: 0em;
-	outline: none;
-	color: var(--w);
+  font-family: "Baloo", cursive;
+  line-height: 0em;
+  outline: none;
+  color: var(--w);
 }
 
 .Splash__Left .Splash__Left__Text h3 {
-	position: relative;
-	font-family: 'Montserrat', sans-serif;
-	margin:-1.8em 0 2em 0;
-	font-weight: 700;
-	font-size: 0.6em;
-	width: 20em;
-	color: var(--or);
-	outline: none;
-	text-align: center;
+  position: relative;
+  font-family: "Montserrat", sans-serif;
+  margin: -1.8em 0 2em 0;
+  font-weight: 700;
+  width: 20em;
+  color: var(--or);
+  outline: none;
+  text-align: center;
 }
 
 .Splash__Left .Splash__Left__Text h3:after {
-	position: absolute;
-	content: '';
-	width: 10em;
-	height: 0.1em;
-	background-color: var(--w);
-	top:200%;
-	left:50%;
-	transform: translateX(-50%);
+  position: absolute;
+  content: "";
+  width: 10em;
+  height: 0.1em;
+  background-color: var(--w);
+  top: 200%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .Splash__Left .Splash__Left__Text p {
-	position: relative;
-	font-family: 'Montserrat', sans-serif;
-	line-height: 2em;
-	font-size: 0.8em;
-	font-weight: 400;
-	width: 20em;
-	color: var(--w);
-	outline: none;
-	text-align: justify;
-	z-index:999;
-	text-indent:2em;
+  position: relative;
+  font-family: "Montserrat", sans-serif;
+  line-height: 2em;
+  font-weight: 400;
+  width: 20em;
+  color: var(--w);
+  outline: none;
+  text-align: justify;
+  z-index: 999;
+  text-indent: 2em;
 }
 
 .Splash__Right {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+@media (min-width: 480px) {
+  .Splash__Left__Text {
+    padding: 3em;
+  }
+  .Splash h2 {
+    font-size: 4.5em;
+  }
+  .Splash h3 {
+    font-size: 0.6em;
+  }
+  .Splash p {
+    font-size: 0.8em;
+  }
+}
+
+@media (max-width: 480px) {
+  .Splash__Left__Text {
+    padding: 2em;
+  }
+  .Splash h2 {
+    font-size: 3.5em;
+  }
+  .Splash h3 {
+    font-size: 0.5em;
+  }
+  .Splash p {
+    font-size: 0.6em;
+  }
+}
+
+@media (min-width: 1025px) {
+  .Splash {
+    grid-template-columns: 27em 1fr;
+    grid-template-rows: 1fr;
+    height: 100%;
+  }
+  .Splash__Left {
+    margin-left:0em;
+  }
+}
+
+@media (max-width: 1025px) {
+  .Splash {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    height: 200%;
+  }
+  .Splash__Left {
+    margin-left:3em;
+  }
 }
