--- a/src/components/Notnik/Notnik.css
+++ b/src/components/Notnik/Notnik.css
@@ -1,8 +1,20 @@
 .Notnik {
-	position: absolute;
-	width:100%;
-	height: 100%;
-	display:grid;
-	grid-template-rows: 1fr;
-	grid-template-columns: 3em 1fr;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 3em 1fr;
+}
+
+@media (min-width: 1025px) {
+  .Notnik {
+    display: grid;
+  }
+}
+
+@media (max-width: 1025px) {
+  .Notnik {
+    display: block;
+  }
 }
