--- a/src/components/Main/Loader/Loader.css
+++ b/src/components/Main/Loader/Loader.css
@@ -1,12 +1,10 @@
 .Loader {
-    position: absolute;
-    top:50%;
-    transform:translateY(-50%);
     width: 100%;
-    height:10em;
+    height:100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding:0.1em;
   }
   
   .lds-ripple {
