Add remaining settings :: Abandon selection color setting (apparently not possible to do) :: Store userSettings in localstorage

--- a/src/components/Main/Settings/ResetPassword/ResetPassword.css
+++ b/src/components/Main/Settings/ResetPassword/ResetPassword.css
@@ -87,3 +87,8 @@
   text-align: center;
   color: var(--bla1);
 }
+
+.Error__Popup p::selection {
+  background-color: transparent;
+  color: var(--w);
+}
