--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -2,9 +2,8 @@
   height: 100%;
   background-color: var(--bla1);
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr repeat(4, 3em) 1fr;
-  grid-row-gap: 2em;
+  position: relative;
+  width: 100%;
   z-index: 9999;
 }
 
@@ -53,32 +52,50 @@
   background-color: var(--or2);
 }
 
-.Menu .Menu__Btn:nth-child(5) {
+.Menu .Menu__Btn:nth-child(6) {
   background-image: url("http://localhost:3000/assets/icons/settings.svg");
 }
 
-.Menu .Menu__Btn:nth-child(5):after {
+.Menu .Menu__Btn:nth-child(6):after {
   background-color: var(--blu);
+}
+
+.Save__Error {
+  position: absolute;
+  width: 3em;
+  height: 3em;
+  pointer-events: none;
+  box-shadow: 1em 0 30px 0px rgba(255, 182, 39, 0.4);
+  animation: flash__parent 0.6s ease-in-out infinite;
+  top: calc(50% + 1em);
+  transition: 0.5s opacity;
+  opacity: 0;
+}
+
+.Save__Error:before {
+  content: "";
+  position: absolute;
+  left: calc(100% - 0.2em);
+  background-color: var(--or2);
+  box-shadow: 0 0 12px 0px var(--or2);
+  width: 0.2em;
+  height: 100%;
+}
+
+@keyframes flash__parent {
+  0% {
+    box-shadow: 1em 0 30px 0px rgba(255, 182, 39, 0);
+  }
+  50% {
+    box-shadow: 1em 0 30px 0px rgba(255, 182, 39, 0.4);
+  }
+  100% {
+    box-shadow: 1em 0 30px 0px rgba(255, 182, 39, 0);
+  }
 }
 
 .Disable {
   opacity: 0.3 !important;
   pointer-events: none !important;
   cursor: none !important;
-}
-
-@media (min-width: 1025px) {
-  .Menu {
-    position: relative;
-    width: 100%;
-  }
-}
-
-@media (max-width: 1025px) {
-  .Menu {
-    position: fixed;
-    width: 3em;
-    left: 0;
-    top: 0;
-  }
 }
